# trifl

./: .gitignore  LICENSE  README.md  pyproject.toml
example_params/: ms-abpp.yaml  tmt-probe_vs_probe.yaml
trifl/: analysis.py  cli.py  config.py  dataset.py  exceptions.py  models.py
trifl/filters/: isobaric.py  shared.py
trifl/parse/: census.py  cimage.py
